sorry try again

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,8 @@
             </div>
             <span>
                 Здесь я выложу свой опыт в верстке. Это не учебные проекты, это бесплатные
-                макеты из интернета, один коммерческий проект и собственный проект сделанный в Figma с нуля. Опыт в React проектах доступен по ссылке https://epprosportz.ru/
+                макеты из интернета, один коммерческий проект и собственный проект сделанный в Figma с нуля. Опыт в React проектах доступен по ссылке 
+                <a href="https://epprosportz.ru/">https://epprosportz.ru/</a> 
             </span>
 
 
