--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 выбраться из плена прокрастинации и зоны комфорта, обрел мощь которая и не снилась моему отцу xD За этот
                 месяц будто научился учиться по-новому и теперь готов поглащать знания. Теперь JS и React не кажутся такими
                 сложными. В общем еще раз спасибо за этот опыт. Что касается настоящего, то сейчас я делаю проект на
-                Реакте по уроку, очень круто всё разжовывает автор (Archakov Blog) Думаю много для себя вынесу из его
+                Реакте по уроку, очень круто всё разжевывает автор (Archakov Blog) Думаю много для себя вынесу из его
                 видосов. Как-то хотелось больше всего написать и раскрыться, но по итогу не лезет в голову ничего, так
                 что всем МИР! и немного фоток =)
                 <div class="today">12.07.2020</div>
