--- a/MeatLoft/index.html
+++ b/MeatLoft/index.html
@@ -147,7 +147,7 @@
                                     котлета</span> залитая <span style="color: #D89919;">сыром</span> с двух сторон,
                                 все это под фирменным <span style="color: #CA9023;">сырным соусом</span> и поделено на
                                 две равные половинки
-                                <p>подается с картфофелем фри*</p>
+                                <p>подается с картофелем фри*</p>
                             </div>
                             <div class="menu__rest-item__price">~730г.</div>
                         </div>
