--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,16 @@
             <div class="portfolio__inner">
                 <div class="portfolio__item-box">
 
+                    <a href="test/index.html" class="portfolio__link" target="_blank">
+                        <div class="portfolio-title">Test on BlackWall</div>
+                        <img src="images/portfolio/blackwall.jpg" alt="">
+                    </a>
+                    <span>
+                        Просто тестовое задание, похожее на мои предыдущие пет-проекты.
+                    </span>
+                </div>
+                <div class="portfolio__item-box">
+
                     <a href="motivate/index.html" class="portfolio__link" target="_blank">
                         <div class="portfolio-title">Motivate</div>
                         <img src="images/portfolio/motivate.jpg" alt="">
