--- a/index.html
+++ b/index.html
@@ -74,6 +74,31 @@
                 <h2>Блог</h2>
             </div>
             <span class="main__content-text">
+                Отчаяние отступило, и уже как-то даже стыдно читать свой недавно написанный стишок. Опускать руки я не стану, буду искать свою компанию, для которой буду полезен. До меня стало доходить, что здесь я пишу историю и она просто обязана стать историей успеха. Так что постараюсь! МИР
+                <div class="today">23.08.2021</div>
+            </span>
+            <span class="main__content-text">                
+                Отчаяние вошло в мое сознание,<br>
+                Нет места мне остались лишь страдания<br>
+                Еще вчера был ученик достойный,<br>
+                Но бросил всё теперь сижу спокойный.<br>
+                Но от спокойствий этих буря раздирает.<br>
+                Нет места в мире, разум умирает<br>
+                Хотел полезным быть для общества и света,<br>
+                Но вместо этого во тьме я жду привета<br>
+                <br>
+                Перезагрузка кончилась, но улучшений нету<br>
+                Ало? гудки.. осталось без ответа<br>
+                <br>
+                В пустой душе есть место лишь страданьям<br>
+                Опустошил я сам в моменты ликованья<br>
+                Опасный лик, самовлюбленность, божества подобие.<br>
+                Но ты всего лишь надпись на надгробии.<br>
+                <br>
+                <img width="100%" src="/images/main/despair.jpg" alt="despair">
+                <div class="today">20.08.2021</div>
+            </span>
+            <span class="main__content-text">
                 Прошло много времени.. Теперь я знаю СИ =) на начальном уровне, но все же. Спасибо Школе21 от Сбера.
                 Ровно 10 дней назад закончился мой "бассейн", где я познакомился с кучей интересных людей, смог
                 выбраться из плена прокрастинации и зоны комфорта, обрел мощь которая и не снилась моему отцу xD За этот
@@ -82,7 +107,7 @@
                 Реакте по уроку, очень круто всё разжевывает автор (Archakov Blog) Думаю много для себя вынесу из его
                 видосов. Как-то хотелось больше всего написать и раскрыться, но по итогу не лезет в голову ничего, так
                 что всем МИР! и немного фоток =)
-                <div class="today">12.07.2020</div>
+                <div class="today">12.07.2021</div>
                 <div class="flex__image-box">
                     <img class="finishphoto" src="/images/main/21/finishphoto.jpg" alt="">
                     <div class="flex__image-minibox">
