--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <div class="container">
                 <ul class="menu__list">
                     <li><a class="home__page" href="index.html">домашняя</a></li>
-                    <li><a href="my-skills.html">навыки</a></li>
-                    <li><a href="portfolio.html">портфолио</a></li>
+                    <li><a href="my-skills.html">JS</a></li>
+                    <li><a href="portfolio.html">сайты</a></li>
                     <li><a href="#">обо мне</a></li>
                     <li><a href="#">жизнь</a></li>
                 </ul>
