upd timer and text on sills

--- a/my-skills.html
+++ b/my-skills.html
@@ -57,7 +57,9 @@
                 слишком громко звучит, это будут обычные: табы, счетчик, модальные окна, калькулятор, слайдер .. Всё то,
                 что
                 в основном требуется в коммерческой разработке. Потенциальный работодатель сможет посмотреть код и
-                оценить мои навыки, поехали.
+                оценить мои навыки, поехали.<br>
+                <br>
+                Когда-то я думал что это будет хороший текст, в действительности он был бы хорошим, если бы я хорошо знал, что требуется в коммерческой разработке. Я мог бы исправить его, но хочу смотреть за прогрессом мысли и мировоззрения.
             </span>
         </div>
 
