--- a/my-skills.html
+++ b/my-skills.html
@@ -59,7 +59,7 @@
                 в основном требуется в коммерческой разработке. Потенциальный работодатель сможет посмотреть код и
                 оценить мои навыки, поехали.<br>
                 <br>
-                Когда-то я думал что это будет хороший текст, в действительности он был бы хорошим, если бы я хорошо знал, что требуется в коммерческой разработке. Я мог бы исправить его, но хочу смотреть за прогрессом мысли и мировоззрения.
+                Когда-то я думал что это будет хороший текст, в действительности он был бы хорошим, если бы я хорошо знал, что требуется в коммерческой разработке. Я мог бы исправить его, но хочу смотреть за прогрессом мысли и мировоззрения. 
             </span>
         </div>
 
@@ -142,7 +142,7 @@
                     Слайдер
                 </div>
                 <span>
-                    Слайдер это неотъемлимая часть любого сайта. Уютно уместить контент в карусель - выгодно
+                    Слайдер это неотъемлемая часть любого сайта. Уютно уместить контент в карусель - выгодно
                     использовать пространство и сфокусировать внимание клиента. В этом разделе, помимо JS слайдера, я
                     оптимизировал фотки, которые изначально весили больше чем весит этот сайт. Правда таких фотографий
                     было всего две, поэтому, чтобы не мудрить, просто добавил фильтры на имеющиеся и сунул их в
@@ -188,8 +188,8 @@
                 <div class="modal__window-box">
                     <span class="modal__text">
                         Какой же сайт без обратной связи? Модальное окно решает такую задачу. Чтобы этот блок смотрелся
-                        чуть красивее, здесь надо добавить побольше текста. Вообще писать читаемый текст это отдельный
-                        скил, сам себя оценивать не буду, но думаю у меня неплохо получается. Дизайн кнопки, кстати, в
+                        чуть красивее, здесь надо добавить побольше текста. Вообще писать читаемый текст - это отдельный
+                        скил, сам себя оценивать не буду, но думаю у меня неплохо получается(читаю через пару лет - получается не очень, если честно). Дизайн кнопки, кстати, в
                         стиле вырви глаз. Просто мне нравится цвет tomato.
                     </span>
                     <button data-modal>Нажать</button>
