new autumn post

--- a/index.html
+++ b/index.html
@@ -73,11 +73,41 @@
             <div class="main__content-title">
                 <h2>Блог</h2>
             </div>
+            <span style="background-image: url(/images/main/leafs/purepng.com-autumn-leafnatureleafautumn-961524674624cn4te.png); background-size: cover;background-repeat: no-repeat;background-position: center top; color: rgb(16, 6, 102);" class="main__content-text">
+                Потянуло на стихи, и это очень здорово. Впереди осень, как раз период когда хочется творить, планировать и мечтать. Стихотворение в целом ни о чем, просто рифмы с долей приятной осенней грусти.<br>
+                <br>
+                Что такое? почему оно так низко?<br>
+                Солнце? потому, что Осень близко<br>
+                <br>
+                Улетают люди, птицы и мечты<br>
+                Все, что тебе нужно, это только ты<br>
+                <br>
+                Осень на пороге, время перемен,<br>
+                И приятным шагом грусть вошла в момент<br>
+                <br>
+                Нет плохой погоды, каждому своё.<br>
+                Кто-то любит Солнце, нужно любить всё.<br>
+                <br>
+                Если я останусь, тем кто был тогда,<br>
+                Кто-же будет счастлив, раз и навсегда?<br>
+                <br>
+                Мне хватает мысли, написать стихи,<br>
+                Не хватает духа, бросить все грехи.<br>
+                <br>
+                Буду дальше слушать музыку земли,<br>
+                И грустить с улыбкой, лето позади.<br>
+                <br>
+                Впереди отдышка, перед долгим сном.<br>
+                Не забудь страницы, с пометкой "на потом".<br>
+                <div class="today">25.08.2021</div>
+            </span>
             <span class="main__content-text">
-                Отчаяние отступило, и уже как-то даже стыдно читать свой недавно написанный стишок. Опускать руки я не стану, буду искать свою компанию, для которой буду полезен. До меня стало доходить, что здесь я пишу историю и она просто обязана стать историей успеха. Так что постараюсь! МИР
+                Отчаяние отступило, и уже как-то даже стыдно читать свой недавно написанный стишок. Опускать руки я не
+                стану, буду искать свою компанию, для которой буду полезен. До меня стало доходить, что здесь я пишу
+                историю и она просто обязана стать историей успеха. Так что постараюсь! МИР
                 <div class="today">23.08.2021</div>
             </span>
-            <span class="main__content-text">                
+            <span class="main__content-text">
                 Отчаяние вошло в мое сознание,<br>
                 Нет места мне остались лишь страдания<br>
                 Еще вчера был ученик достойный,<br>
@@ -102,7 +132,8 @@
                 Прошло много времени.. Теперь я знаю СИ =) на начальном уровне, но все же. Спасибо Школе21 от Сбера.
                 Ровно 10 дней назад закончился мой "бассейн", где я познакомился с кучей интересных людей, смог
                 выбраться из плена прокрастинации и зоны комфорта, обрел мощь которая и не снилась моему отцу xD За этот
-                месяц будто научился учиться по-новому и теперь готов поглащать знания. Теперь JS и React не кажутся такими
+                месяц будто научился учиться по-новому и теперь готов поглащать знания. Теперь JS и React не кажутся
+                такими
                 сложными. В общем еще раз спасибо за этот опыт. Что касается настоящего, то сейчас я делаю проект на
                 Реакте по уроку, очень круто всё разжевывает автор (Archakov Blog) Думаю много для себя вынесу из его
                 видосов. Как-то хотелось больше всего написать и раскрыться, но по итогу не лезет в голову ничего, так
@@ -119,7 +150,7 @@
                         <img class="meinred" src="/images/main/21/meinred.jpg" alt="">
                         <span>PLUSULTRA</span>
                     </div>
-                    
+
                 </div>
             </span>
             <span class="main__content-text">
