--- a/portfolio.html
+++ b/portfolio.html
@@ -61,9 +61,19 @@
             <div class="portfolio__inner">
                 <div class="portfolio__item-box">
 
+                    <a href="Lartest/index.html" class="portfolio__link" target="_blank">
+                        <div class="portfolio-title" style="color: tomato;">Italy</div>
+                        <img src="images/portfolio/italy.webp" alt="italy">
+                    </a>
+                    <span>
+                        Еще один тест, наверное придется сделать отдельную вкладку, чтобы не засорять портфолио, хотя оно конечно оставляет желать лучшего
+                    </span>
+                </div>
+                <div class="portfolio__item-box">
+
                     <a href="test/index.html" class="portfolio__link" target="_blank">
                         <div class="portfolio-title">Test on BlackWall</div>
-                        <img src="images/portfolio/blackwall.jpg" alt="">
+                        <img src="images/portfolio/blackwall.jpg" alt="bw">
                     </a>
                     <span>
                         Просто тестовое задание, похожее на мои предыдущие пет-проекты.
@@ -73,7 +83,7 @@
 
                     <a href="motivate/index.html" class="portfolio__link" target="_blank">
                         <div class="portfolio-title">Motivate</div>
-                        <img src="images/portfolio/motivate.jpg" alt="">
+                        <img src="images/portfolio/motivate.jpg" alt="motivate">
                     </a>
                     <span>
                         Одна из последних работ, макет брал на просторах телеграм каналов. Адаптивная верстка с
@@ -84,7 +94,7 @@
 
                     <a href="MeatLoft/index.html" class="portfolio__link" target="_blank">
                         <div class="portfolio-title">MeatLoft</div>
-                        <img src="images/portfolio/meatLoft1.jpg" alt="">
+                        <img src="images/portfolio/meatLoft1.jpg" alt="meatLoft">
                     </a>
                     <span>
                         Личный проект, в котором пришлось поработать дизайнером. На втором экране слайдера скрин из игры
@@ -97,7 +107,7 @@
 
                     <a href="https://feyazub.ru/" class="portfolio__link" target="_blank">
                         <div class="portfolio-title">Зубная Фея</div>
-                        <img src="images/portfolio/feyazub1.jpg" alt="">
+                        <img src="images/portfolio/feyazub1.jpg" alt="feya">
                     </a>
                     <span>
                         Коммерческий проект, сразу после курса верстальщика прошел стажировку в monomoloco-team, ребята
@@ -110,7 +120,7 @@
 
                     <a href="apartComplex/index.html" class="portfolio__link" target="_blank">
                         <div class="portfolio-title">Apartments</div>
-                        <img src="images/portfolio/apart1.jpg" alt="">
+                        <img src="images/portfolio/apart1.jpg" alt="apart">
                     </a>
                     <span>
                         Данный макет нашел на просторах интернета, в тот момент когда я его верстал, в Figma видно было
@@ -123,7 +133,7 @@
 
                     <a href="covid/index.html" class="portfolio__link" target="_blank">
                         <div class="portfolio-title">COVID-19</div>
-                        <img src="images/portfolio/covid1.jpg" alt="">
+                        <img src="images/portfolio/covid1.jpg" alt="covid">
                     </a>
                     <span>
                         Во время карантина хотелось сверстать что-то актуальное, нашел бесплатный макет о COVID-19
