--- a/index.html
+++ b/index.html
@@ -73,8 +73,42 @@
             <div class="main__content-title">
                 <h2>Блог</h2>
             </div>
-            <span style="background-image: url(/images/main/leafs/purepng.com-autumn-leafnatureleafautumn-961524674624cn4te.png); background-size: cover;background-repeat: no-repeat;background-position: center top; color: rgb(16, 6, 102);" class="main__content-text">
-                Потянуло на стихи, и это очень здорово. Впереди осень, как раз период когда хочется творить, планировать и мечтать. Стихотворение в целом ни о чем, просто рифмы с долей приятной осенней грусти.<br>
+            <span class="main__content-text">
+                Сегодня первый день осени, день знаний и по совместительству один из самых прикольных дней в году (был
+                когда-то). В школьные годы за лето мы с одноклассниками почти не общались, все жили в разных районах,
+                многие уезжали в лагеря или в деревню. И вот момент встречи всегда был радостным для меня, особенно в
+                старших классах. В универе у меня было только 3 первых сентября и из них я помню только первое, когда
+                еще никого не знаешь из группы и все в новинку, немного трясет от страха и начинающейся осенней
+                прохлады. Ну а сейчас уже нет никакого праздника, лишь фантомные эмоции. Хотелось бы подвести итоги
+                своей учебной деятельности за последние 2 года. Осенью 2019 года (в начале ноября) я оплатил курс по
+                верстке, заплатил я тогда 100 баксов. Учеба шла не напряжно, спасибо преподавателю (Вадим Прокопчук). В
+                новогоднюю ночь под бой курантов я уже понимал, что теперь владею необходимыми навыками для
+                веб-разработки начального уровня. Сверстать лендос для меня было раз плюнуть, Так же научили верстать
+                магазины и немного пользоваться дарами jQuery плагинов :) Первая работа-подработка не заставила себя
+                долго ждать. Друзья как раз занимались разработкой сайтов и у них висел один не срочный проект, отдали
+                его мне объясняя нюансы в процессе, а они к слову были. Была собственная библиотека CSS, которая
+                ускоряла разработку для них, но мне как не знающему она конечно же ее замедляла. Ну в общем эту работу я
+                сделал, но больше таких заказов у них не было и я тогда решил, что буду развиваться дальше и параллельно
+                искать работу. Как же я ошибался когда думал, что смогу ее быстро найти. Для фриланса не хватило хватки
+                и напора, для работы в студии не хватало опыта. Но речь не об этом, следующий мой курс был курс на Udemy
+                по JS от Ивана Петриченко. К этому моменту пандемия ворвалась в нашу жизнь, и все мы сели на карантин,
+                который в итоге сильно сбавил мой темп. Какая может быть учеба, когда тут с женой вдвоем весь день
+                смотришь LOST и Кремниевую долину ^_^ В прочем я все равно старался не простаивать и хотя бы верстать
+                что-то, добавляя модальные окна и делая меню в адаптации, как раз примерно год назад начал делать этот
+                сайт, и уже дошел до React, но в нем я до сих пор разбираюсь, очень медленно, но верно. Сейчас я могу на
+                JSX сверстать приложение, разбить приложение на компоненты, понимаю как работают пропсы и стейт, могу
+                работать со сторонними api через fetch, начал разбираться в хуках, но пока не дошел до Redux и всего что
+                должно быть далее. Пока это все к чему я пришел, пытался устроиться на работу и пытаюсь по сей день,
+                делал немного тестовых, но на "немного тестовых" далеко не уедешь. Продолжаем искать и учиться, совсем
+                кстати выпало из головы, что месяц в школе21 проучился, но там был C и для общего развития это было
+                полезно, хотя бы теперь в unix консоле немного разбираюсь. В общем с праздником, с днем знаний, будьте здоровы и не переставайте учиться. Всех обнял
+                <div class="today">01.09.2021</div>
+            </span>
+            <span
+                style="background-image: url(/images/main/leafs/purepng.com-autumn-leafnatureleafautumn-961524674624cn4te.png); background-size: cover;background-repeat: no-repeat;background-position: center top; color: rgb(16, 6, 102);"
+                class="main__content-text">
+                Потянуло на стихи, и это очень здорово. Впереди осень, как раз период когда хочется творить, планировать
+                и мечтать. Стихотворение в целом ни о чем, просто рифмы с долей приятной осенней грусти.<br>
                 <br>
                 Что такое? почему оно так низко?<br>
                 Солнце? потому, что Осень близко<br>
