--- a/index.html
+++ b/index.html
@@ -73,6 +73,21 @@
             <div class="main__content-title">
                 <h2>Блог</h2>
             </div>
+            <div class="main__content-text">
+                <p>
+                    Не знаю зачем, но я почему-то использовал span для добавления текста в блог. Пришло время
+                    переделать. С момента написания последнего поста произошло много событий. Позавчера меня пригласили
+                    на первое собеседование, было интересно как я справлюсь и что это вообще такое. Вопросы были не
+                    сложные, по типу - назовите приоритеты стилей, и какие типы данных есть в JS. Как мне показалось я
+                    отлично справился и на все вопросы ответил, но вчера мне пришел отказ. Видимо нашли более подходящую
+                    кандидатуру. Ну, считай, получил опыт. Есть и кое-что другое - пришло, наконец-то, приглашение на
+                    основное обучение в Школу21, и я несказанно рад этому событию, впереди долгий путь наполненный
+                    интересными трудностями и легкостями. Всех благ, обнял
+                </p>
+                <img src="/images/main/offer21.jpg" alt="21offer">
+                <p>PLUUUUUSULTRAAAAA</p>
+                <div style="background: lightcyan;color: tomato;" class="today">16.09.2021</div>
+            </div>
             <span class="main__content-text">
                 Сегодня первый день осени, день знаний и по совместительству один из самых прикольных дней в году (был
                 когда-то). В школьные годы за лето мы с одноклассниками почти не общались, все жили в разных районах,
@@ -101,7 +116,8 @@
                 должно быть далее. Пока это все к чему я пришел, пытался устроиться на работу и пытаюсь по сей день,
                 делал немного тестовых, но на "немного тестовых" далеко не уедешь. Продолжаем искать и учиться, совсем
                 кстати выпало из головы, что месяц в школе21 проучился, но там был C и для общего развития это было
-                полезно, хотя бы теперь в unix консоле немного разбираюсь. В общем с праздником, с днем знаний, будьте здоровы и не переставайте учиться. Всех обнял
+                полезно, хотя бы теперь в unix консоле немного разбираюсь. В общем с праздником, с днем знаний, будьте
+                здоровы и не переставайте учиться. Всех обнял
                 <div class="today">01.09.2021</div>
             </span>
             <span
