--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <p>
                     Не знаю зачем, но я почему-то использовал span для добавления текста в блог. Пришло время
                     переделать. С момента написания последнего поста произошло много событий. Позавчера меня пригласили
-                    на первое собеседование, было интересно как я справлюсь и что это вообще такое. Вопросы были не
-                    сложные, по типу - назовите приоритеты стилей, и какие типы данных есть в JS. Как мне показалось я
+                    на первое собеседование, было интересно как я справлюсь и что это вообще такое. Вопросы были
+                    несложные, по типу - назовите приоритеты стилей, и какие типы данных есть в JS. Как мне показалось я
                     отлично справился и на все вопросы ответил, но вчера мне пришел отказ. Видимо нашли более подходящую
                     кандидатуру. Ну, считай, получил опыт. Есть и кое-что другое - пришло, наконец-то, приглашение на
                     основное обучение в Школу21, и я несказанно рад этому событию, впереди долгий путь наполненный
