--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
             </div>
             <div class="main__content-text">
                 <p>
+                   В воскресенье в 4 утра отправились в ветклинику, у Вафли воспалилась матка и пошел спаечный процесс с кишечником, сделали операцию. Разрезали мою кису, удалили матку, прочистили кишечник, до сих пор лежим отходим, ходим на капельницы. Просто захотелось написать об этом, чтобы через время, когда все уже будет хорошо, вспомнить об этом, возможно с улыбкой, потому что теперь там в будущем, киса живет долго и счастливо. За окном сквозь тучи немного выглядывает солнце, еще не все листья опали, наступила пора золотой осени. Всем прекрасного настроения, берегите близких
+                </p>               
+                <div style="background: dimgray;color: wheat;" class="today">23.09.2021</div>
+            </div>
+            <div class="main__content-text">
+                <p>
                     Не знаю зачем, но я почему-то использовал span для добавления текста в блог. Пришло время
                     переделать. С момента написания последнего поста произошло много событий. Позавчера меня пригласили
                     на первое собеседование, было интересно как я справлюсь и что это вообще такое. Вопросы были
