--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     основное обучение в Школу21, и я несказанно рад этому событию, впереди долгий путь наполненный
                     интересными трудностями и легкостями. Всех благ, обнял
                 </p>
-                <img src="/images/main/offer21.jpg" alt="21offer">
+                <img src="/images/main/offer21.jpg" style="max-width: 100%;" alt="21offer">
                 <p>PLUUUUUSULTRAAAAA</p>
                 <div style="background: lightcyan;color: tomato;" class="today">16.09.2021</div>
             </div>
