--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
                     }, false);
                 </script>
                 <audio id="player" controls style="width:100%;max-width:300px;display: none;" loop>
-                    <source src="/AinoGG.github.io/audio/ZivertLYRIQ.mp3" type="audio/mp3">
-                    Тег audio не поддерживается вашим браузером.
+                    <source src="https://ainogg.github.io/audio/ZivertLYRIQ.mp3" type="audio/mp3">
                 </audio>
                 <ul class="menu__list">
                     <li><a class="home__page" href="index.html">домашняя</a></li>
