--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                     <li><a class="home__page" href="index.html">домашняя</a></li>
                     <li><a href="my-skills.html">JS</a></li>
                     <li><a href="portfolio.html">сайты</a></li>
-                    <li onclick="document.getElementById('player').play()"><a href="#">обо мне</a></li>
-                    <li onclick="document.getElementById('player').pause()"><a href="#">Пауза</a></li>
-                    <li onclick="document.getElementById('player').volume+=0.1"><a href="#">Юля</a></li>
-                    <li onclick="document.getElementById('player').volume-=0.1"><a href="#">Прости</a></li>
+                    <li onclick="document.getElementById('player').play()">обо мне</li>
+                    <li onclick="document.getElementById('player').pause()">Пауза</li>
+                    <li onclick="document.getElementById('player').volume+=0.1">Юля</li>
+                    <li onclick="document.getElementById('player').volume-=0.1">Прости</li>
                 </ul>
             </div>
 
