--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
             </div>
             <div class="main__content-text">
                 <p>
+                   Привет, у меня все хорошо, кошке полегчало. Я все еще тут, но уже заканчиваю. Это последний мой пост в этом блоге ТТ впереди блог-портфолио на Реакте. Залип на этой песне, кто смог найти пасхалку +rep, Надеюсь этот сайт не станет популярным и меня не засудят за пиратство. Хочу сказать спасибо тому кто возьмет меня на работу, знай - я постараюсь, сделаю все что в силах сделать. Те кто смог осилить прочитать весь тот бред, что меня посещал во время добавления очередной записи, вам тоже спасибо. Спасибо маме и конечно тебе. Прощай
+                </p>               
+                <div style="background: black;color: white;" class="today">15.02.2022</div>
+            </div>
+            <div class="main__content-text">
+                <p>
                    В воскресенье в 4 утра отправились в ветклинику, у Вафли воспалилась матка и пошел спаечный процесс с кишечником, сделали операцию. Разрезали мою кису, удалили матку, прочистили кишечник, до сих пор лежим отходим, ходим на капельницы. Просто захотелось написать об этом, чтобы через время, когда все уже будет хорошо, вспомнить об этом, возможно с улыбкой, потому что теперь там в будущем, киса живет долго и счастливо. За окном сквозь тучи немного выглядывает солнце, еще не все листья опали, наступила пора золотой осени. Всем прекрасного настроения, берегите близких
                 </p>               
                 <div style="background: dimgray;color: wheat;" class="today">23.09.2021</div>
