--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Домашняя</title>
+    <title>MY</title>
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -55,13 +55,13 @@
                     <source src="https://ainogg.github.io/audio/ZivertLYRIQ.mp3" type="audio/mp3">
                 </audio>
                 <ul class="menu__list">
-                    <li><a class="home__page" href="index.html">домашняя</a></li>
-                    <li><a href="my-skills.html">JS</a></li>
-                    <li><a href="portfolio.html">сайты</a></li>
+                    <li><a class="home__page" href="#top">домашняя</a></li>
+                    <li><a href="my-skills.html" target="_blank">JS</a></li>
+                    <li><a href="portfolio.html" target="_blank">сайты</a></li>
                     <li onclick="document.getElementById('player').play()">обо мне</li>
                     <li onclick="document.getElementById('player').pause()">Пауза</li>
-                    <li onclick="document.getElementById('player').volume+=0.1">Юля</li>
-                    <li onclick="document.getElementById('player').volume-=0.1">Прости</li>
+                    <li onclick="document.getElementById('player').volume+=0.1">+</li>
+                    <li onclick="document.getElementById('player').volume-=0.1">-</li>
                 </ul>
             </div>
 
