--- a/my-skills.html
+++ b/my-skills.html
@@ -59,8 +59,18 @@
                 в основном требуется в коммерческой разработке. Потенциальный работодатель сможет посмотреть код и
                 оценить мои навыки, поехали.<br>
                 <br>
-                Когда-то я думал что это будет хороший текст, в действительности он был бы хорошим, если бы я хорошо знал, что требуется в коммерческой разработке. Я мог бы исправить его, но хочу смотреть за прогрессом мысли и мировоззрения. 
+                Когда-то я думал что это будет хороший текст, в действительности он был бы хорошим, если бы я хорошо знал, что требуется в коммерческой разработке. Я мог бы исправить его, но хочу смотреть за прогрессом мысли и мировоззрения. <br>
+                <br>
+                Весь js в этом разделе поделен на модули, все бандлится через webpack<br>
+                <br>
+                Биполярный блог получается<br>
             </span>
+            <div class="weare-box">
+                <span class="weare1">Мы похожи</span>
+                <span class="weare2">Мы похожи</span>
+                <span class="weare3">Мы похожи</span>
+            </div>
+            
         </div>
 
         <div class="tabs__section">
