--- a/portfolio.html
+++ b/portfolio.html
@@ -59,6 +59,16 @@
             <div class="portfolio__inner">
                 <div class="portfolio__item-box">
 
+                    <a href="IQT/index.html" class="portfolio__link" target="_blank">
+                        <div class="portfolio-title" style="color: tomato;">Italy</div>
+                        <img src="images/portfolio/italy.webp" alt="italy">
+                    </a>
+                    <span>
+                        Простенький тест на IQ, с запросом к API и без перезагрузки страницы
+                    </span>
+                </div>
+                <div class="portfolio__item-box">
+
                     <a href="Lartest/index.html" class="portfolio__link" target="_blank">
                         <div class="portfolio-title" style="color: tomato;">Italy</div>
                         <img src="images/portfolio/italy.webp" alt="italy">
