--- a/IQT/index.html
+++ b/IQT/index.html
@@ -138,7 +138,7 @@
                     результат
                 </p>
             </div>
-            <div class="response-slot">Вы </div>
+            <div class="response-slot"></div>
         </div>
     </div>
     <footer>
