change image on iqt

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
 
                     <a href="IQT/index.html" class="portfolio__link" target="_blank">
                         <div class="portfolio-title" style="color: tomato;">Italy</div>
-                        <img src="images/portfolio/italy.webp" alt="italy">
+                        <img src="images/portfolio/imageBlue.jpg" alt="italy">
                     </a>
                     <span>
                         Простенький тест на IQ, с запросом к API и без перезагрузки страницы
