--- a/portfolio.html
+++ b/portfolio.html
@@ -69,6 +69,16 @@
                 </div>
                 <div class="portfolio__item-box">
 
+                    <a href="artmix/index.html" class="portfolio__link" target="_blank">
+                        <div class="portfolio-title" style="color: tomato;">ArtMIX</div>
+                        <img src="images/portfolio/imageBlue.jpg" alt="iqt">
+                    </a>
+                    <span>
+                        ArtmixDEcor
+                    </span>
+                </div>
+                <div class="portfolio__item-box">
+
                     <a href="Lartest/index.html" class="portfolio__link" target="_blank">
                         <div class="portfolio-title" style="color: tomato;">Italy</div>
                         <img src="images/portfolio/italy.webp" alt="italy">
