--- a/artmix/index.html
+++ b/artmix/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="./_nuxt/entry.DwaHSRAe.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="./_nuxt/B6R5svEo.js">
-<link rel="prefetch" as="image" type="image/svg+xml" href="./_nuxt/logo.Ki2-AHqk.svg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/armor.B3u8pVvw.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/crane.DbK0-Q6j.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/dragon.D34PHW1v.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/dragonhead.LDHBXni-.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/duplons.IKEG3thC.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/earth.CIqGytEh.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/headhelmet.3WXWP4m7.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/horses.nbQ-J0vf.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/terracotta.DaiPPtOP.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/terracotta0.BniZsukw.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/terracotta1.hC0-25q5.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/terracotta2.Cr_D86Y0.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/terracotta3.u0NB-W9e.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/terracottafull.fHCrxlZ8.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/terracottafull1.DwF6-6OS.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/unicorn.DhQHHi6j.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/face.CG9gxrKb.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/unicorn.Byw_7ClS.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/earth.Dqx5yZ3C.jpg">
-<link rel="prefetch" as="image" type="image/jpeg" href="./_nuxt/background.Bthfkc8e.jpg">
-<link rel="prefetch" as="style" crossorigin href="./_nuxt/error-404.CoZKRZXM.css">
-<link rel="prefetch" as="script" crossorigin href="./_nuxt/BXhPiWg4.js">
-<link rel="prefetch" as="script" crossorigin href="./_nuxt/BAaLBwo5.js">
-<link rel="prefetch" as="style" crossorigin href="./_nuxt/error-500.D6506J9O.css">
-<link rel="prefetch" as="script" crossorigin href="./_nuxt/efDvYiqe.js">
-<script type="module" src="./_nuxt/B6R5svEo.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1732231915081,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"7cb3afeb-51f2-400b-b124-bf297a31d557",buildAssetsDir:"./_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="stylesheet" href="./nuxt/entry.DwaHSRAe.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="./nuxt/B6R5svEo.js">
+<link rel="prefetch" as="image" type="image/svg+xml" href="./nuxt/logo.Ki2-AHqk.svg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/armor.B3u8pVvw.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/crane.DbK0-Q6j.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/dragon.D34PHW1v.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/dragonhead.LDHBXni-.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/duplons.IKEG3thC.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/earth.CIqGytEh.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/headhelmet.3WXWP4m7.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/horses.nbQ-J0vf.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/terracotta.DaiPPtOP.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/terracotta0.BniZsukw.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/terracotta1.hC0-25q5.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/terracotta2.Cr_D86Y0.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/terracotta3.u0NB-W9e.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/terracottafull.fHCrxlZ8.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/terracottafull1.DwF6-6OS.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/unicorn.DhQHHi6j.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/face.CG9gxrKb.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/unicorn.Byw_7ClS.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/earth.Dqx5yZ3C.jpg">
+<link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/background.Bthfkc8e.jpg">
+<link rel="prefetch" as="style" crossorigin href="./nuxt/error-404.CoZKRZXM.css">
+<link rel="prefetch" as="script" crossorigin href="./nuxt/BXhPiWg4.js">
+<link rel="prefetch" as="script" crossorigin href="./nuxt/BAaLBwo5.js">
+<link rel="prefetch" as="style" crossorigin href="./nuxt/error-500.D6506J9O.css">
+<link rel="prefetch" as="script" crossorigin href="./nuxt/efDvYiqe.js">
+<script type="module" src="./nuxt/B6R5svEo.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1732231915081,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"7cb3afeb-51f2-400b-b124-bf297a31d557",buildAssetsDir:"./nuxt/",cdnURL:""}}</script></body></html>
