--- a/artmix/200.html
+++ b/artmix/200.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="./nuxt/entry.DwaHSRAe.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="./nuxt/B6R5svEo.js">
+<link rel="stylesheet" href="./nuxt/entry.DU1cKbIm.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="./nuxt/DvY48xmc.js">
 <link rel="prefetch" as="image" type="image/svg+xml" href="./nuxt/logo.Ki2-AHqk.svg">
 <link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/armor.B3u8pVvw.jpg">
 <link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/crane.DbK0-Q6j.jpg">
@@ -24,9 +24,9 @@
 <link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/earth.Dqx5yZ3C.jpg">
 <link rel="prefetch" as="image" type="image/jpeg" href="./nuxt/background.Bthfkc8e.jpg">
 <link rel="prefetch" as="style" crossorigin href="./nuxt/error-404.CoZKRZXM.css">
-<link rel="prefetch" as="script" crossorigin href="./nuxt/BXhPiWg4.js">
-<link rel="prefetch" as="script" crossorigin href="./nuxt/BAaLBwo5.js">
+<link rel="prefetch" as="script" crossorigin href="./nuxt/CYr_PDV3.js">
+<link rel="prefetch" as="script" crossorigin href="./nuxt/Ck9Y9-bv.js">
 <link rel="prefetch" as="style" crossorigin href="./nuxt/error-500.D6506J9O.css">
-<link rel="prefetch" as="script" crossorigin href="./nuxt/efDvYiqe.js">
-<script type="module" src="./nuxt/B6R5svEo.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1732231915080,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"7cb3afeb-51f2-400b-b124-bf297a31d557",buildAssetsDir:"./nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="./nuxt/B7tVqybd.js">
+<script type="module" src="./nuxt/DvY48xmc.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1732236601244,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"042da2ee-6d8e-4c7b-ae82-7c1e60137b43",buildAssetsDir:"./nuxt/",cdnURL:""}}</script></body></html>
